<resources>
    <string name="app_name">YAMF^2</string>

    <string name="details">Details</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="activated">Module Is Activated!</string>
    <string name="need_reboot">Version change, reboot required</string>
    <string name="not_activated">Module is not activated.</string>
    <string name="need_reboot_message">Existing windows are fine\nBut new window may make system crash</string>
    <string name="reboot">Reboot</string>
    <string name="settings">Settings</string>
    <string name="open_count">Open Count</string>
    <string name="new_window">new window</string>
    <string name="open_app_list">open app list</string>
    <string name="telegram_channel">Telegram channel</string>
    <string name="donate">donate</string>
    <string name="back_desc">back</string>
    <string name="minimize_desc">minimize</string>
    <string name="resize_desc">resize window</string>
    <string name="fullscreen_desc">maximize</string>
    <string name="close_desc">close</string>
    <string name="xposeddescription">Freeform window for AOSP-like systems</string>
    <string name="info_system_version">System version</string>
    <string name="open_with_yamf">Freeform</string>
    <string name="enter_window">enter window</string>
    <string name="build_type">Build Type</string>
    <string name="reset_all_window">reset all window</string>
    <string name="window_size_separator">x</string>
    <string name="default_window_size_text">Default Window Size</string>
    <string name="ime_switch_text">Show IME in window\nVIRTUAL_DISPLAY_FLAG_PUBLIC must be true</string>
    <string name="keep_alive_service_text">Keeps YAMF^2 alive in the background</string>
    <string name="collapsed_app_icon">app icon for collapsed view</string>
</resources>