<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/m3_appbar_expanded_title_margin_horizontal"
        android:paddingVertical="?dialogPreferredPadding"
        tools:ignore="PrivateResource">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_status"
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="?colorPrimary"
            android:outlineSpotShadowColor="?colorPrimary"
            android:stateListAnimator="@null"
            app:cardBackgroundColor="?colorPrimary"
            app:cardElevation="6dp"
            app:cardPreventCornerOverlap="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="?dialogPreferredPadding">

                <ImageView
                    android:id="@+id/iv_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_round_check_circle_24"
                    app:tint="?colorOnPrimary"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_toEndOf="@id/iv_icon"
                    android:fontFamily="sans-serif-medium"
                    android:textAppearance="?textAppearanceTitleMedium"
                    android:textColor="?colorOnPrimary"
                    android:textSize="16sp"
                    tools:text="Magisk: activated" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_active"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@id/iv_icon"
                    android:textAppearance="?textAppearanceBodyMedium"
                    android:textColor="?colorOnPrimary"
                    tools:text="1.2.3" />

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="?dialogPreferredPadding">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_count"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_openCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/build_type"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_buildType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_system_version"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/system_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/back_desc"
                        app:drawableStartCompat="@drawable/ic_back"
                        app:drawableTint="?colorOnBackground" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/minimize_desc"
                        app:drawableStartCompat="@drawable/ic_minimize"
                        app:drawableTint="?colorOnBackground" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/fullscreen_desc"
                        app:drawableStartCompat="@drawable/ic_maximize"
                        app:drawableTint="?colorOnBackground" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/close_desc"
                        app:drawableStartCompat="@drawable/ic_close_24"
                        app:drawableTint="?colorOnBackground" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>
